--- a/notebooks/analysis_01_job_satisfaction.ipynb
+++ b/notebooks/analysis_01_job_satisfaction.ipynb
@@ -1090,6 +1090,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -1168,7 +1173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately it seems, that visiting StackOverflow doesn't directly impact the job satisfaction in a linear fashion. the average JobSatisfaction stays the same whether someone vistis Stackoverflow seldom or often. "
+    "Unfortunately it seems, that visiting StackOverflow doesn't directly impact the job satisfaction in a linear fashion. the average JobSatisfaction stays the same whether someone vistis Stackoverflow seldom or often. Also the low correlation suggests, that visiting stack Overflow more frequently doesn't directly impact job satisfaction in a linear fashion. "
    ]
   },
   {
