--- a/notebooks/analysis_02_ai_usage_ethics.ipynb
+++ b/notebooks/analysis_02_ai_usage_ethics.ipynb
@@ -8,16 +8,7 @@
     "\n",
     "This Notebook answeres the question:\n",
     "\n",
-    "How does the usage of AI tools correlate with developers' concerns about AI's ethical implications and potential threats?\n",
-    "\n",
-    "- Import Libraries: Start by importing libraries you'll need for data manipulation, analysis, and visualization.\n",
-    "- Load Data (Optional): If the data is stored in the \"data\" folder, use appropriate functions to load it into the notebook environment.\n",
-    "- Data Understanding: Briefly describe the data, including column names and data types.\n",
-    "- Data Preparation: This will involve handling missing values, converting data types if needed, and cleaning any inconsistencies.\n",
-    "- Exploratory Data Analysis (EDA): Perform relevant Exploratory Data Analysis (EDA) techniques like descriptive statistics, visualizations (histograms, scatter plots) to understand the distribution of variables and relationships between them.\n",
-    "- Modeling (Optional): Depending on the question, you might choose to use statistical tests, correlations, or even simple machine learning models (e.g., linear regression). Clearly explain the chosen approach and why it's suitable.\n",
-    "- Visualization: Create clear and impactful visualizations to communicate your findings visually (bar charts, line graphs, heatmaps).\n",
-    "- Results and Conclusion: Summarize your key findings related to the specific business question being addressed in the notebook. Tie back these findings to the initial question and the data you analyzed."
+    "How does the usage of AI tools correlate with developers' concerns about AI's ethical implications and potential threats?"
    ]
   },
   {
@@ -1132,10 +1123,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "1. Cluster 0 Interpretation: <br>\n",
+    "AISelect (1.0): On average, respondents in this cluster selected \"Yes\" (1.0), indicating they have likely interacted with AI tools.<br>\n",
+    "AIAcc (2.78): This suggests that the respondents in this cluster have somewhat low trust in AI (scaled between 1 and 5).<br>\n",
+    "AIChallenges (64.95): The challenges faced by respondents in this cluster are moderate in comparison to the other clusters.<br>\n",
+    "AIEthics (42.13): This indicates a moderate level of ethical concerns among this group.<br>\n",
+    "AIThreat (0.93): Most respondents in this cluster do not see AI as a major threat (since the values are scaled close to 1).<br>\n",
+    "Conclusion: Cluster 0 represents individuals who have interacted with AI tools, have moderate trust in AI, face some challenges, and have moderate ethical concerns, but they do not see AI as a significant threat.<br>\n",
+    "<br>\n",
+    "2. Cluster 1 Interpretation:<br>\n",
+    "AISelect (2.0): The value suggests that respondents in this cluster answered \"No, and I don't plan to\" (2.0), indicating they haven’t interacted with AI tools and have no intention to do so.<br>\n",
+    "AIAcc (5.0): This represents complete distrust of AI tools.<br>\n",
+    "AIChallenges (130.13): These respondents report significant challenges in adopting AI.<br>\n",
+    "AIEthics (46.60): Ethical concerns are somewhat higher in this group compared to Cluster 0.<br>\n",
+    "AIThreat (0.91): Similar to Cluster 0, this group does not perceive AI as a substantial threat.<br>\n",
+    "Conclusion: Cluster 1 consists of respondents who haven’t used AI, don’t trust it, face substantial challenges, have slightly higher ethical concerns than Cluster 0, but still don’t see AI as a major threat.<br>\n",
+    "<br>\n",
+    "3. Cluster 2 Interpretation:<br>\n",
+    "AISelect (1.0): This group has interacted with AI tools (same as Cluster 0).<br>\n",
+    "AIAcc (2.95): Their trust in AI tools is slightly higher than Cluster 0 (closer to 3, or \"neutral\").<br>\n",
+    "AIChallenges (202.80): This group faces significantly higher challenges compared to the other clusters.<br>\n",
+    "AIEthics (57.44): This cluster has the highest ethical concerns.<br>\n",
+    "AIThreat (0.92): Again, this group does not see AI as a major threat, similar to the other clusters.<br>\n",
+    "Conclusion: Cluster 2 represents individuals who have used AI tools, have nearly neutral trust in AI, face the highest challenges in implementing or using AI, and are the most concerned about AI ethics. However, they don’t see AI as an immediate threat.<br>\n",
+    "<br>\n",
+    "General Interpretation:<br>\n",
+    "Cluster 0: Users of AI with moderate trust, challenges, and ethical concerns. AI isn’t seen as a threat.<br>\n",
+    "Cluster 1: Non-users of AI who distrust AI and face many challenges and ethical concerns but do not see AI as a threat.<br>\n",
+    "Cluster 2: Users of AI who face the highest challenges and have the greatest ethical concerns, with nearly neutral trust in AI.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Conclusion:</br>\n",
+    "The analysis suggests that usage of AI tools among developers correlates with their concerns about AI's ethical implications, but there is minimal correlation with concerns about AI as a potential threat.</br>\n",
+    "</br>\n",
+    "\n",
+    "- Developers who use AI tools (Clusters 0 and 2) show varying levels of trust in AI, but they also exhibit moderate to high ethical concerns. These concerns increase significantly in Cluster 2, where users face the greatest challenges and have the highest ethical worries.</br>\n",
+    "</br>\n",
+    "- Developers who do not use AI tools (Cluster 1) demonstrate complete distrust in AI and report significant challenges and ethical concerns, although their ethical concerns are slightly lower than in Cluster 2.</br>\n",
+    "</br>\n",
+    "- Across all clusters, AI is not perceived as a major threat, regardless of whether the developers have used AI tools or not. The values for AIThreat remain consistently low, suggesting that while ethical issues are prominent, there is no widespread fear about the existential dangers of AI among these developers.</br>\n",
+    "\n",
+    "Key Insights:</br>\n",
+    "- AI usage is associated with increasing concerns about ethical implications, especially as developers face greater challenges in AI adoption.</br>\n",
+    "- However, fear of AI as a threat does not appear to be a major issue, even among developers who distrust or avoid using AI tools.</br>\n",
+    "\n",
+    "</br> This implies that while developers are primarily concerned about the ethical challenges and practical difficulties of AI, they are not overwhelmingly anxious about its broader societal or existential threats."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
