--- a/notebooks/analysis_03_education_self_learning.ipynb
+++ b/notebooks/analysis_03_education_self_learning.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This Notebook answeres the question:\n",
     "\n",
-    "How do education levels influence developers' ability to self-learn new technologies?\n",
+    "What is the relationship between years of professional coding experience and total compensation across different continents?\n",
     "\n",
     "\n",
     "- Import Libraries: Start by importing libraries you'll need for data manipulation, analysis, and visualization.\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "4       True   MC     SAVR  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "[5 rows x 114 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -423,97 +423,175 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EdLevel</th>\n",
-       "      <th>LearnCode</th>\n",
-       "      <th>LearnCodeOnline</th>\n",
-       "      <th>TechDoc</th>\n",
+       "      <th>YearsCodePro</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>CompTotal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Primary/elementary school</td>\n",
-       "      <td>Books / Physical media</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>United States of America</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bachelor’s degree (B.A., B.S., B.Eng., etc.)</td>\n",
-       "      <td>Books / Physical media;Colleague;On the job tr...</td>\n",
-       "      <td>Technical documentation;Blogs;Books;Written Tu...</td>\n",
-       "      <td>API document(s) and/or SDK document(s);User gu...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Master’s degree (M.A., M.S., M.Eng., MBA, etc.)</td>\n",
-       "      <td>Books / Physical media;Colleague;On the job tr...</td>\n",
-       "      <td>Technical documentation;Blogs;Books;Written Tu...</td>\n",
-       "      <td>API document(s) and/or SDK document(s);User gu...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Some college/university study without earning ...</td>\n",
-       "      <td>Other online resources (e.g., videos, blogs, f...</td>\n",
-       "      <td>Stack Overflow;How-to videos;Interactive tutorial</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canada</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Secondary school (e.g. American high school, G...</td>\n",
-       "      <td>Other online resources (e.g., videos, blogs, f...</td>\n",
-       "      <td>Technical documentation;Blogs;Written Tutorial...</td>\n",
-       "      <td>API document(s) and/or SDK document(s);User gu...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Serbia</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>India</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>11</td>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             EdLevel  \\\n",
-       "0                          Primary/elementary school   \n",
-       "1       Bachelor’s degree (B.A., B.S., B.Eng., etc.)   \n",
-       "2    Master’s degree (M.A., M.S., M.Eng., MBA, etc.)   \n",
-       "3  Some college/university study without earning ...   \n",
-       "4  Secondary school (e.g. American high school, G...   \n",
-       "\n",
-       "                                           LearnCode  \\\n",
-       "0                             Books / Physical media   \n",
-       "1  Books / Physical media;Colleague;On the job tr...   \n",
-       "2  Books / Physical media;Colleague;On the job tr...   \n",
-       "3  Other online resources (e.g., videos, blogs, f...   \n",
-       "4  Other online resources (e.g., videos, blogs, f...   \n",
-       "\n",
-       "                                     LearnCodeOnline  \\\n",
-       "0                                                NaN   \n",
-       "1  Technical documentation;Blogs;Books;Written Tu...   \n",
-       "2  Technical documentation;Blogs;Books;Written Tu...   \n",
-       "3  Stack Overflow;How-to videos;Interactive tutorial   \n",
-       "4  Technical documentation;Blogs;Written Tutorial...   \n",
-       "\n",
-       "                                             TechDoc  \n",
-       "0                                                NaN  \n",
-       "1  API document(s) and/or SDK document(s);User gu...  \n",
-       "2  API document(s) and/or SDK document(s);User gu...  \n",
-       "3                                                NaN  \n",
-       "4  API document(s) and/or SDK document(s);User gu...  "
+       "   YearsCodePro                                            Country  CompTotal\n",
+       "0           NaN                           United States of America        NaN\n",
+       "1            17  United Kingdom of Great Britain and Northern I...        NaN\n",
+       "2            27  United Kingdom of Great Britain and Northern I...        NaN\n",
+       "3           NaN                                             Canada        NaN\n",
+       "4           NaN                                             Norway        NaN\n",
+       "5           NaN                           United States of America        NaN\n",
+       "6             7                           United States of America        NaN\n",
+       "7           NaN                                         Uzbekistan        NaN\n",
+       "8           NaN  United Kingdom of Great Britain and Northern I...        NaN\n",
+       "9            11                                             Serbia        NaN\n",
+       "10          NaN                           United States of America        NaN\n",
+       "11           25                                             Poland        NaN\n",
+       "12           12                           United States of America        NaN\n",
+       "13          NaN                                        Philippines        NaN\n",
+       "14           10                                           Bulgaria        NaN\n",
+       "15           27                                        Switzerland        NaN\n",
+       "16          NaN                                             Canada        NaN\n",
+       "17            3                                              India        NaN\n",
+       "18           10                                            Germany        NaN\n",
+       "19           11  United Kingdom of Great Britain and Northern I...        NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# let's create the dataframe we need from df_public\n",
-    "df_q3 = df_public[[ 'EdLevel', 'LearnCode', 'LearnCodeOnline', 'TechDoc']].copy()\n",
+    "df_q3 = df_public[[ 'YearsCodePro', 'Country', 'CompTotal']].copy()\n",
     "\n",
-    "df_q3.head()"
+    "df_q3.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -522,21 +600,239 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 65437 entries, 0 to 65436\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column           Non-Null Count  Dtype \n",
-      "---  ------           --------------  ----- \n",
-      " 0   EdLevel          60784 non-null  object\n",
-      " 1   LearnCode        60488 non-null  object\n",
-      " 2   LearnCodeOnline  49237 non-null  object\n",
-      " 3   TechDoc          40897 non-null  object\n",
-      "dtypes: object(4)\n",
-      "memory usage: 2.0+ MB\n"
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   YearsCodePro  51610 non-null  object \n",
+      " 1   Country       58930 non-null  object \n",
+      " 2   CompTotal     33740 non-null  float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 1.5+ MB\n"
      ]
     }
    ],
    "source": [
     "df_q3.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation\n",
+    "\n",
+    "Since the salary is the target variable, we have two options.The first is we could fill the NaN values with the mean value of the entered data. The Problem is, that we only have a third of the values filled in. That leads us two option two which ist to drop the NaN values of CompTotal.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_q3 = df_q3.dropna(subset=['CompTotal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 33740 entries, 72 to 65431\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   YearsCodePro  33617 non-null  object \n",
+      " 1   Country       33740 non-null  object \n",
+      " 2   CompTotal     33740 non-null  float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 1.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_q3.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " The column YearsCodePro column should have a int64/32 value when we analyze it a little we see that if the user leraned coding less then a year the answer was 'less then a year'. We can transfer that to 0 since the user didn't coded a year at all. Also we could bin them together into 7 labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 33740 entries, 72 to 65431\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   YearsCodePro  33617 non-null  object \n",
+      " 1   Country       33740 non-null  object \n",
+      " 2   CompTotal     33740 non-null  float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 1.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_q3['YearsCodePro'] = df_q3['YearsCodePro'].replace('Less than 1 year', 0)\n",
+    "\n",
+    "df_q3.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that there are only 133 values missing we can compute the mean of that column and fill the NaN values with it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 33740 entries, 72 to 65431\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   YearsCodePro  33740 non-null  float64\n",
+      " 1   Country       33740 non-null  object \n",
+      " 2   CompTotal     33740 non-null  float64\n",
+      "dtypes: float64(2), object(1)\n",
+      "memory usage: 1.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the column to numeric (if needed)\n",
+    "df_q3['YearsCodePro'] = pd.to_numeric(df_q3['YearsCodePro'], errors='coerce')\n",
+    "# Calculate the mean, ignoring NaN values\n",
+    "mean_value = df_q3['YearsCodePro'].mean()\n",
+    "\n",
+    "# Fill NaN values with the mean\n",
+    "df_q3['YearsCodePro'] = df_q3['YearsCodePro'].fillna(mean_value)\n",
+    "\n",
+    "df_q3.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we should transfer the categorical values of country into numerical. Since the Country column isn't in an inherent order we should use One-Hot Encoding.Also we would only like to see the top 5 countries "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YearsCodePro Max: 50.0\n",
+      "YearsCodePro Min: 0.0\n",
+      "CompTotal Max: 1111111111111111.0\n",
+      "CompTotal Min: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Identify the top 10 countries based on the count\n",
+    "top_countries = df_q3['Country'].value_counts().nlargest(6).index\n",
+    "\n",
+    "# Step 2: Filter the DataFrame to keep only the top 10 countries\n",
+    "df_q3 = df_q3[df_q3['Country'].isin(top_countries)]\n",
+    "\n",
+    "# One-hot encode the 'Country' column\n",
+    "df_q3_encoded = pd.get_dummies(df_q3, columns=['Country'], drop_first=True)\n",
+    "\n",
+    "# Now 'df_encoded' will have new binary columns for each country (excluding the first one due to drop_first=True)\n",
+    "df_q3_encoded.head()\n",
+    "\n",
+    "print('YearsCodePro Max:', df_q3_encoded['YearsCodePro'].max())\n",
+    "print('YearsCodePro Min:', df_q3_encoded['YearsCodePro'].min())\n",
+    "print('CompTotal Max:',df_q3_encoded['CompTotal'].max())\n",
+    "print('CompTotal Min:',df_q3_encoded['CompTotal'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 1.7082638117062594\n",
+      "R-squared score: 0.2732134109956691\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Log transformation of the target variable\n",
+    "df_q3_encoded['CompTotal_log'] = np.log1p(df_q3_encoded['CompTotal'])\n",
+    "\n",
+    "# Features and target variable\n",
+    "X = df_q3_encoded.drop(columns=['CompTotal', 'CompTotal_log'])  # Drop original target\n",
+    "y = df_q3_encoded['CompTotal_log']  # Use log-transformed target\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Standardization\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Ridge regression model\n",
+    "ridge_model = Ridge(alpha=1.0)  # You can experiment with the alpha parameter\n",
+    "ridge_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = ridge_model.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "print(\"R-squared score:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -562,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
