--- a/notebooks/analysis_01_job_satisfaction.ipynb
+++ b/notebooks/analysis_01_job_satisfaction.ipynb
@@ -510,7 +510,7 @@
    "source": [
     "## Data Understanding\n",
     "\n",
-    "First of all we should declare which data we should use to answer the Question. We need to know how high their JobSatisfaction is. Therefore we need the data from JobSat. Furthermore we should check how often the visit Stack overflow, if they take Part in answering Questions and if they have an Account on that Platform. So We need SOVisitFreq, SOAccount, SOPartFreq. Then we can Start the Data Preparation."
+    "First of all we should declare which data we should use to answer the Question. We need to know how high the participants JobSatisfaction is. Therefore we need the data from JobSat. Furthermore we should check how often they visit Stack overflow, if they take Part in answering Questions and if they have an Account on that Platform. So We need SOVisitFreq, SOAccount, SOPartFreq. Then we can Start the Data Preparation."
    ]
   },
   {
