adjustments for the notebooks/ dictionary

--- a/notebooks/analysis_01_job_satisfaction.ipynb
+++ b/notebooks/analysis_01_job_satisfaction.ipynb
@@ -508,9 +508,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## Data Understanding\n",
     "\n",
-    "First of all we should declare which data we should use to answer the Question. We need to know how high the participants JobSatisfaction is. Therefore we need the data from JobSat. Furthermore we should check how often they visit Stack overflow, if they take Part in answering Questions and if they have an Account on that Platform. So We need SOVisitFreq, SOAccount, SOPartFreq. Then we can Start the Data Preparation."
+    "First, we should define which data is needed to answer the question. We need to assess the participants' job satisfaction, so we will use the data from **JobSat**. Additionally, we should check how often they visit Stack Overflow, whether they participate in answering questions, and if they have an account on the platform. For this, we will use **SOVisitFreq**, **SOAccount**, and **SOPartFreq**. Once we have these, we can begin the data preparation.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -662,11 +666,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "---\n",
+    "\n",
     "## Data Preparation\n",
     "\n",
-    "Since JobSat is the target variable, we should drop all rows where it contains a NaN value. In those instances, it would be impossible to measure job satisfaction.\n",
-    "For the frequency of visits, we should consider replacing NaN values with \"never,\" as every other response seems to cover a specific timeframe of usage.\n",
-    "Furthermore, if there is a NaN value for SOAccount, we can assume that this information is \"Not sure/can't remember\" as the participant was unable to provide a clear answer regarding whether they have an account. Even if they do have one, they likely seldom use it."
+    "Since **JobSat** is the target variable, we should drop all rows where it contains a NaN value, as it would be impossible to measure job satisfaction in those instances. \n",
+    "\n",
+    "For the frequency of visits (**SOVisitFreq**) and **SOPartFreq**, we should consider replacing NaN values with \"never,\" since every other response represents a specific timeframe of usage.\n",
+    "\n",
+    "Additionally, if there is a NaN value for **SOAccount**, we can assume the participant is \"Not sure/can't remember.\" This likely indicates that even if they have an account, they rarely use it.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -833,12 +844,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see there are no NaN values anymore. The next step is to encode the categorical variables into numerical so it is possible to train machine learning models. So we should use:\n",
     "\n",
-    "- `Ordinal Encoding` for SOVisitFreq and SOPartFreq: Since these columns implie a frequency order, we should assign numerical values based on the frequency of visits.\n",
-    "- `One-Hot Encoding` for SOAccount: We can encode Yes and everything else (No or not sure) as 1 and 0. \n",
+    "---\n",
     "\n",
-    "Also we should change the data type from JobSat from float to int."
+    "As we can see, there are no longer any NaN values. The next step is to encode the categorical variables into numerical formats, making it possible to train machine learning models. We should proceed as follows:\n",
+    "\n",
+    "- Use **Ordinal Encoding** for **SOVisitFreq** and **SOPartFreq**: Since these columns imply a frequency order, we should assign numerical values based on the frequency of visits.\n",
+    "- Use **One-Hot Encoding** for **SOAccount**: We can encode \"Yes\" as 1 and everything else (No or Not sure) as 0.\n",
+    "\n",
+    "Finally, we should change the data type of **JobSat** from float to int.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -997,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "now it is time to define our target and our features."
+    "now it is time to define our target and our feature variables."
    ]
   },
   {
@@ -1079,11 +1095,6 @@
     "print('R2 Score:', r2_score(y_test, y_pred))\n",
     "print('Correlation Between Variables :', df_q1[['SOVisitFreq', 'JobSat']].corr())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1207,13 +1218,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately it seems, that visiting StackOverflow doesn't directly impact the job satisfaction in a linear fashion. the average JobSatisfaction stays the same whether someone vistis Stackoverflow seldom or often. Also the low correlation suggests, that visiting stack Overflow more frequently doesn't directly impact job satisfaction in a linear fashion. "
+    "\n",
+    "---\n",
+    "\n",
+    "Unfortunately, it seems that visiting Stack Overflow does not directly impact job satisfaction in a linear way. The average job satisfaction remains consistent, regardless of whether someone visits Stack Overflow rarely or frequently. Additionally, the low correlation suggests that more frequent visits to Stack Overflow do not have a direct, linear effect on job satisfaction.\n",
+    "\n",
+    "---"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
