--- a/notebooks/analysis_02_ai_usage_ethics.ipynb
+++ b/notebooks/analysis_02_ai_usage_ethics.ipynb
@@ -512,9 +512,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "---\n",
+    "\n",
     "## Data Understanding\n",
     "\n",
-    "First of all, we should determine which data to use to answer the question. We need to know if the developers are using any AI tools at all, so we require the data from AISelect. Additionally, we should examine which part of their project they are using AI in and how highly they rate the accountability of such tools. Therefore, we need AIAcc and AIChallenges. It is possible that the importance of ethical responsibilities correlates with their concerns about AI being a threat to their current job. Thus, we also need AIThreat and AIEthics."
+    "First, we need to identify the data required to answer the question. To determine if developers are using any AI tools, we will use the data from *AISelect*. Additionally, we should analyze which aspects of their projects involve AI and how they rate the accuracy of these tools. For that, we need *AIAcc* and *AIChallenges*. There may also be a correlation between the importance developers place on ethical responsibilities and their concerns about AI being a threat to their jobs. Thus, we will include *AIThreat* and *AIEthics* as well.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -648,11 +653,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "---\n",
+    "\n",
     "## Data Preparation\n",
     "\n",
-    "Since AISelect is the target variable, we should drop all rows where it contains a NaN value. In these cases, it would be impossible to determine whether the participant uses an AI tool, plans to use one, or does not want to use one.\n",
-    "It is also crucial to know whether they see AI as a threat to their job. Therefore, NaN values in the AIThreat column should be dropped as well.\n",
-    "For the other columns, we can fill NaN values with \"unknown,\" as these do not have a significant impact on determining whether developers perceive AI as a potential threat."
+    "Since *AISelect* is the target variable, we should drop all rows where it contains a NaN value, as it would be impossible to determine whether the participant uses an AI tool, plans to use one, or does not intend to use one. It is also crucial to know whether participants perceive AI as a threat to their job, so any NaN values in the *AIThreat* column should also be dropped. For the remaining columns, we can fill NaN values with \"unknown,\" as these missing values do not significantly impact the assessment of whether developers view AI as a potential threat.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -796,10 +804,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see there are no NaN values anymore. The next step is to encode the categorical variables into numerical so it is possible to train machine learning models. So we should use:\n",
     "\n",
-    "- `Ordinal Encoding` for AISelect: Convert the AISelect column to ordinal values \n",
-    "- `Categorical Encoding` for AIAcc, AIChallenges, AIEthics, and AIThreat: Convert these columns into numerical values or dummy variables if they have multiple categories.\n"
+    "---\n",
+    "\n",
+    "As we can see, there are no NaN values anymore. The next step is to encode the categorical variables into numerical values so that we can train machine learning models. Here's how we should proceed:\n",
+    "\n",
+    "- **Ordinal Encoding** for *AISelect*: Convert the *AISelect* column into ordinal values based on the responses' order.\n",
+    "- **Categorical Encoding** for *AIAcc* and *AIThreat*: Convert these columns into numerical values or dummy variables, depending on the number of categories.\n",
+    "- **One-Hot Encoding** for *AIChallenges*: Since we cannot rank or structure the relevance of responses in the *AIChallenges* column, we should create separate columns for each possible answer using one-hot encoding.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1678,8 +1692,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Based on the clustering results you've provided, here’s a conclusion that summarizes the insights:\n",
     "\n",
     "---\n",
     "\n",
