add processed data

--- a/notebooks/analysis_01_job_satisfaction.ipynb
+++ b/notebooks/analysis_01_job_satisfaction.ipynb
@@ -837,6 +837,7 @@
     }
    ],
    "source": [
+    "df_q1.to_csv('../data/processed/df_q1.csv', index=False)\n",
     "df_q1.info()"
    ]
   },
@@ -1006,6 +1007,7 @@
     }
    ],
    "source": [
+    "\n",
     "df_q1.info()"
    ]
   },
