--- a/notebooks/analysis_02_ai_usage_ethics.ipynb
+++ b/notebooks/analysis_02_ai_usage_ethics.ipynb
@@ -797,6 +797,7 @@
     }
    ],
    "source": [
+    "df_q2.to_csv('../data/processed/df_q2.csv', index=False)\n",
     "df_q2.info()"
    ]
   },
@@ -818,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1055,7 @@
        "10                                                  0                   "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1107,29 +1108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.47974269  0.54488735  0.13956057 ... -0.61237558 -0.23511712\n",
-      "  -0.36165527]\n",
-      " [-0.47974269  0.54488735  0.13956057 ... -0.61237558 -0.23511712\n",
-      "  -0.36165527]\n",
-      " [-0.47974269 -0.18043348  1.92661573 ... -0.61237558 -0.23511712\n",
-      "  -0.36165527]\n",
-      " ...\n",
-      " [-0.47974269  0.54488735  0.13956057 ... -0.61237558 -0.23511712\n",
-      "  -0.36165527]\n",
-      " [ 2.08445072  1.27020817 -1.64749458 ... -0.61237558  4.25319941\n",
-      "  -0.36165527]\n",
-      " [-0.47974269 -0.9057543   0.13956057 ... -0.61237558 -0.23511712\n",
-      "  -0.36165527]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standardize the features\n",
     "scaler = StandardScaler()\n",
@@ -1145,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1497,7 @@
        "20        0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
